syntax = "proto3";
package workload;

message ListOptions {
  string rfwID = 1;
  required string category = 2;
  repeated string fields = 3;
  int32 unitSize = 4;
  int32 batchID = 5;
  int32 batchSize = 6;
}

message Workload {
  int32 CPUUtilization_Average = 1;
  int64 NetworkIn_Average = 2;
  int64 NetworkOut_Average = 3;
  float MemoryUtilization_Average = 4;
  float Final_Target = 5;
}

message WorkloadList {
  repeated Workload workloads = 1;
}

message WorkloadResponse {
  string rfwID = 1;
  int32 lastBatchID = 2;
  repeated WorkloadList workloadBatches = 3;
}

service WorkloadService {
  rpc List(ListOptions) returns (WorkloadResponse) {}
}